Fixed footer on smaller phones

--- a/src/App.css
+++ b/src/App.css
@@ -138,3 +138,10 @@ body {
     font-size: 2em;
   }
 }
+
+@media screen and ( max-width: 400px ) {
+  #footer-contact {
+    display: block;
+    font-size: 1.3em;
+  }
+}
